License headers and javadoc stubs on types.

--- a/scrap-menagerie-app/pom.xml
+++ b/scrap-menagerie-app/pom.xml
@@ -76,7 +76,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<execute></execute>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
