--- a/scrap-menagerie-app/pom.xml
+++ b/scrap-menagerie-app/pom.xml
@@ -8,14 +8,18 @@
 	<build>
 		<finalName>scrap-menagerie-app</finalName>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.3</version>
 				<executions>
+
+					<!-- Copy the rns-agent into the target directory so the app can be 
+						launched from Eclipse. -->
 					<execution>
 						<id>copy</id>
-						<phase>process-resources</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
@@ -24,17 +28,44 @@
 								<artifactItem>
 									<groupId>org.hawkinssoftware.rns</groupId>
 									<artifactId>rns-agent</artifactId>
-									<version>0.1-alpha-1-2011.10.28-SNAPSHOT</version>
+									<version>${project.parent.version}</version>
+									<outputDirectory>${project.build.directory}</outputDirectory>
+									<destFileName>rns-agent.jar</destFileName>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+
+					<!-- Unpack the native libs into the target directory so the app can 
+						be launched from the Eclipse. -->
+					<execution>
+						<id>unpack-native</id>
+						<phase>package</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.hawkinssoftware.azia</groupId>
+									<artifactId>azia-native-input</artifactId>
+									<version>${project.parent.version}</version>
+									<type>zip</type>
+									<classifier>bin</classifier>
 									<outputDirectory>${project.build.directory}</outputDirectory>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
 					</execution>
+
 				</executions>
 			</plugin>
+
+			<!-- Create the application jar with the main-class manifest entry. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -43,7 +74,7 @@
 						</manifest>
 						<manifestEntries>
 							<mode>development</mode>
-							<url>${pom.url}</url>
+							<url>${project.url}</url>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -51,8 +82,19 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+
+				<!-- Set the Java version for the compiler. -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
+
+				<!--Tell Eclipse not to participate in the unpack goal. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -72,26 +114,18 @@
 											[2.3,)
 										</versionRange>
 										<goals>
-											<goal>copy</goal>
+											<goal>unpack</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute></execute>
+										<ignore></ignore>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.1</version>
-					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
-					</configuration>
-				</plugin>
+				
 			</plugins>
 		</pluginManagement>
 	</build>
