Completing list selection and navigation behaviors. New feature: obsoletion of clips beyond 100.

--- a/scrap-menagerie-app/src/main/resources/config/default-shortcuts.properties
+++ b/scrap-menagerie-app/src/main/resources/config/default-shortcuts.properties
@@ -1,7 +1,10 @@
-MetaKeys=CONTROL,E
-MoveSelectionDown=DOWN
+MetaKeys=CONTROL,D
 MoveSelectionUp=UP
-ReCopy=NUMBER6
+MoveSelectionDown=DOWN
+MoveSelectionPageUp=PRIOR
+MoveSelectionPageDown=NEXT
+MoveSelectionToTop=NUMBER6
+ReCopy=RETURN
 ChangeLeadingCase=NUMBER8
 ReduceToPlainText=NUMBER9
 ActivateSelectedFragment=NUMBER0
